css/scss/partials/_featured-article.scss
/*article*/.featured-article {
    position: relative;
    z-index: 1;
    // box-shadow: 0 30px 10px -20px rgba( darken( $secondary, 80% ), 0.4 ),
    //             0 0 20px 0 rgba( darken( $secondary, 80% ), 0.3 );
    box-shadow: 0 10px 40px 0 rgba( darken( $secondary, 80% ), 0.1 );
    margin: 40px auto 100px;
    max-width: 300px;

    &__wrapper {
        padding: 0 20px;
    }

    &__meta {
        padding: 20px 20px 0;
        vertical-align: middle;
        position: relative;
        text-align: right;
        min-height: 60px;
        line-height: 40px;

        &:before {
            content: '';
            position: absolute;
            width: 100%;
            height: 90px;
            background: linear-gradient( to bottom, rgba( darken( $secondary, 80% ), 1) 0%, rgba( darken( $secondary, 80% ), 0) 100% );
            z-index: -1;
            top: 0;
            left: 0;
        }

        &__avatar {
            border-radius: 50%;
            // width: 30px;
            // height: 30px;
            vertical-align: middle;
            position: absolute;
            bottom: 0;
            left: 20px;
        }

        &__date {
            font-size: 1.4rem;
            font-weight: 700;
            vertical-align: middle;
            color: #FFFFFF;
            color: rgba( lighten( $secondary, 20% ), 0.8 );
        }
    }

    &__content {
        background: #FFFFFF;
        padding: 20px;
        transform: translate3d( 0, 40px, 0 );
        // box-shadow: 0 0 20px 0 rgba( darken( $secondary, 80% ), 0.3 );
        box-shadow: 0 30px 60px 0 rgba( darken( $secondary, 80% ), 0.4 );
        text-align: center;

        &__title {
            text-align: left;
        }

        &__excerpt {
            font-size: 1.2rem;
            line-height: 1.5;
            margin-bottom: 0;
            text-align: left;
        }

        &__link {
            display: inline-block;
            padding: 10px 20px;
            font-size: 1.2rem;
            font-weight: 700;
            text-transform: uppercase;
            text-decoration: none;
            background: $secondary;
            color: darken( $secondary, 40% );
            border-radius: 100px;
            margin-top: 20px;
            box-shadow: 0 10px 20px 0px rgba( darken( $secondary, 45% ), 0.2 ),
                        0 0 30px 5px rgba( $secondary, 0.8 );

        }
    }

    &__image {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        z-index: -2;
        // display: none;
    }
}

